<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/camera_tab_one"
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/helmet_setting_layout_title_marginLeft_size"
                android:gravity="center_vertical"
                android:text="@string/helmet_setting_camera_record_title"
                android:textColor="@color/helmet_action_title_color"
                android:textSize="@dimen/helmet_setting_layout_title_text_size" />

            <ImageView
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_marginLeft="@dimen/helmet_setting_layout_title_split_marginleft_size"
                android:src="@drawable/helmet_split_icon" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3px"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/helmet_custom_line_color" />

        <RadioGroup
            android:id="@+id/helmet_setting_front_video_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21dp"
            android:layout_marginRight="21dp" >

            <RadioButton
                android:id="@+id/helmet_setting_camera_front_hd_item_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@android:color/transparent"
                android:button="@null"
                android:drawableRight="@drawable/helmet_setting_radio_button"
                android:fontFamily="sans-serif-light"
                android:text="@string/helmet_setting_camera_720p"
                android:textColor="@color/helmet_setting_camera_item_text_color"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/helmet_setting_camera_front_full_hd_item_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:background="@android:color/transparent"
                android:button="@null"
                android:drawableRight="@drawable/helmet_setting_radio_button"
                android:fontFamily="sans-serif-light"
                android:text="@string/helmet_setting_camera_1080p"
                android:textColor="@color/helmet_setting_camera_item_text_color"
                android:textSize="18sp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="38dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/helmet_setting_layout_title_marginLeft_size"
                android:gravity="center_vertical"
                android:text="@string/helmet_setting_camera_Photo_title"
                android:textColor="@color/helmet_action_title_color"
                android:textSize="@dimen/helmet_setting_layout_title_text_size" />

            <ImageView
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_marginLeft="@dimen/helmet_setting_layout_title_split_marginleft_size"
                android:src="@drawable/helmet_split_icon" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3px"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/helmet_custom_line_color" />

        <RadioGroup
            android:id="@+id/helmet_setting_front_pic_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" >

            <RadioButton
                android:id="@+id/helmet_setting_camera_front_ordinary_pic_item_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@android:color/transparent"
                android:button="@null"
                android:drawableRight="@drawable/helmet_setting_radio_button"
                android:fontFamily="sans-serif-light"
                android:text="@string/helmet_setting_camera_ordinary_pic"
                android:textColor="@color/helmet_setting_camera_item_text_color"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/helmet_setting_camera_front_fine_pic_item_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:background="@android:color/transparent"
                android:button="@null"
                android:drawableRight="@drawable/helmet_setting_radio_button"
                android:fontFamily="sans-serif-light"
                android:text="@string/helmet_setting_camera_fine_pic"
                android:textColor="@color/helmet_setting_camera_item_text_color"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/helmet_setting_camera_front_ultra_clear_pic_item_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:background="@android:color/transparent"
                android:button="@null"
                android:drawableRight="@drawable/helmet_setting_radio_button"
                android:fontFamily="sans-serif-light"
                android:text="@string/helmet_setting_camera_ultra_clear_pic"
                android:textColor="@color/helmet_setting_camera_item_text_color"
                android:textSize="18sp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/helmet_camera_front_btn"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/helmet_camera_btn_selector"
                android:gravity="center|bottom"
                android:elevation="10dp"
                android:paddingBottom="14dp"
                android:text="@string/helmet_setting_helmet_title"
                android:textColor="@color/helmet_action_title_color" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>